--- a/semana 1/martes/fixed_navigation_files/main.css
+++ b/semana 1/martes/fixed_navigation_files/main.css
@@ -1,4 +1,57 @@
-.container {
+#wrapper {
+  width:768px;
   margin: 0 auto;
-  width: 768px;
+  background-color:gray;
+}
+
+.top {
+  width:100%;
+  height:70px;
+  background-color:black;
+  text-align:center;
+}
+
+.image-container {
+  padding:0px;
+  height:100%;
+}
+
+.top img {
+  height:70px;
+}
+
+.top-nav {
+  float:left;
+  width:120px;
+  background-color:gray;
+  text-align:center;
+}
+
+.content {
+  float:left;
+  width:636px;
+  background-color:white;
+  padding-left:12px;
+}
+
+nav ul {
+  padding:0;
+  list-style:none;
+  margin-top:22px;
+}
+
+nav li {
+  font-size:1.2em;
+  margin-bottom:10px;
+}
+
+li a {
+  text-decoration:none;
+  color:white;
+}
+
+.footer {
+  clear:both;
+  background-color:white;
+  text-align:center;
 }
