--- a/semana 1/lunes/sinatra_skeleton_anagrams/app/views/index.erb
+++ b/semana 1/lunes/sinatra_skeleton_anagrams/app/views/index.erb
@@ -1,5 +1,7 @@
 <h1>Welcome to Anagrams!</h1>
 
 <!-- Aquí deberá ir la forma de HTML -->
-
-
+<form action="/new_word" method="post">
+  <input type="text" name="user_word">
+  <input type="submit" value="Get Anagrams!">
+</form>
