--- a/semana 1/lunes/sinatra_skeleton_anagrams/app/views/word.erb
+++ b/semana 1/lunes/sinatra_skeleton_anagrams/app/views/word.erb
@@ -3,6 +3,11 @@
 <% if @new_word %>
   <p>Estos son anagramas para '<%= @new_word %>':</p>
   <p># Aqui deberás enlistar todos los anagramas</p>
+  <ul>
+  <% @words.each do |word| %>
+  	<li>
+  		<%= word.name %>
+  	</li>
+  <% end %>
+  </ul>
 <% end %>
-
-
