--- a/semana 1/sinatra_skeleton_codeacamp/app/views/layout.erb
+++ b/semana 1/sinatra_skeleton_codeacamp/app/views/layout.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
-    normalize.css remueve las diferenecia que hay entre browsers segun los defaults de css predeterminados que utilizan. 
+  <title>Cool Page</title>
+  <!--
+    normalize.css remueve las diferenecia que hay entre browsers segun los defaults de css predeterminados que utilizan.
     Revisa: http://necolas.github.com/normalize.css/
   -->
   <link rel="stylesheet" href="/css/normalize.css">
