few more anagram files

--- a/semana 1/lunes/sinatra_skeleton_anagrams/app/views/word.erb
+++ b/semana 1/lunes/sinatra_skeleton_anagrams/app/views/word.erb
@@ -1,5 +1,5 @@
 <h1>Find Anagrams!</h1>
-
+<%= erb :entry_form %>
 <% if @new_word %>
   <p>Estos son anagramas para '<%= @new_word %>':</p>
   <p># Aqui deberás enlistar todos los anagramas</p>
