fixed topbar nav exercise

--- a/semana 1/jueves/fixed_navigation_files_dup/main.css
+++ b/semana 1/jueves/fixed_navigation_files_dup/main.css
@@ -2,3 +2,30 @@
   margin: 0 auto;
   width: 768px;
 }
+
+ul {
+  list-style:none;
+  float:right;
+}
+
+li {
+  float:left;
+  margin-right:20px;
+}
+
+li a {
+  text-decoration:none;
+  color:white;
+  font-size:1.2em;
+}
+
+.top-nav {
+  background: black;
+  position:fixed;
+  top:0;
+  width:100%;
+}
+
+.content {
+  padding-top:70px;
+}
