--- a/semana 2/miercoles/sinatra_bitly/app/views/index.erb
+++ b/semana 2/miercoles/sinatra_bitly/app/views/index.erb
@@ -1,4 +1,5 @@
-  <h1>Bienvenido a Sinatra!</h1>
-  <p>Este es un esqueleto de sinatra que armamos para ti</p>
-
-  
+  <h1>Url Shortener!</h1>
+  <form action="/urls" method="post">
+    <input type="text" name="url">
+    <input type="submit" value="Shorten">
+  </form>
