--- a/semana 2/miercoles/sinatra_bitly/app/views/layout.erb
+++ b/semana 2/miercoles/sinatra_bitly/app/views/layout.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
-    normalize.css remueve las diferenecia que hay entre browsers segun los defaults de css predeterminados que utilizan. 
+  <!--
+    normalize.css remueve las diferenecia que hay entre browsers segun los defaults de css predeterminados que utilizan.
     Revisa: http://necolas.github.com/normalize.css/
   -->
   <link rel="stylesheet" href="/css/normalize.css">
@@ -14,7 +14,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
-  <title></title>
+  <title>My Own Bit.ly</title>
 </head>
 <body>
   <div class="container">
