--- a/semana 2/miercoles/sinatra_bitly_users/app/views/_logged.erb
+++ b/semana 2/miercoles/sinatra_bitly_users/app/views/_logged.erb
@@ -1,4 +1,5 @@
-<ul>
-  <li>
+<p><a href="/">Main page</a></p>
+<p><a href="/profile">Your profile</a></p>
+<p>
 <a href="/logout">Log out</a>
-</li>
+</p>
