--- a/semana 2/miercoles/sinatra_bitly_users/app/views/profile.erb
+++ b/semana 2/miercoles/sinatra_bitly_users/app/views/profile.erb
@@ -1,5 +1,6 @@
 <p>Here is what I know about you:</p>
-<p>Your email: <%= @user.email %></p>
+<p>Name: <%= @user.name %></p>
+<p>Email: <%= @user.email %></p>
 
 <% if !@user_urls.empty? %>
   <p>Here's how your URLs are doing:</p>
