--- a/semana 2/miercoles/sinatra_bitly_users/app/views/_logged.erb
+++ b/semana 2/miercoles/sinatra_bitly_users/app/views/_logged.erb
@@ -1,5 +1,5 @@
 <p><a href="/">Main page</a></p>
-<p><a href="/profile">Your profile</a></p>
+<p><a href="/users/<%= @user.username %>">Your profile</a></p>
 <p>
 <a href="/logout">Log out</a>
 </p>
