--- a/semana 2/miercoles/sinatra_bitly_users/app/views/signup.erb
+++ b/semana 2/miercoles/sinatra_bitly_users/app/views/signup.erb
@@ -1,3 +1,8 @@
 <h1>Bienvenido a mi Bit.ly!</h1>
 <p>Registrate</p>
-  <%= erb :_form %>
+<form method="post">
+  <input type="text" name="username" placeholder="username"><br>
+  <input type="text" name="email" placeholder="email"><br>
+  <input type="password" name="password" placeholder="password"><br>
+  <input type="submit" value="Enviar">
+</form>
