working blog, start css

--- a/semana 3/martes/blog_anonimo/app/views/_showtags.erb
+++ b/semana 3/martes/blog_anonimo/app/views/_showtags.erb
@@ -1,1 +1,6 @@
-
+<p>Tags:
+  <% post.tags.each do |tag| %>
+  <a href="/tag/<%= tag.name %>"><%= tag.name %></a>
+  <% if post.tags.last.name != tag.name %> , <% end %>
+  <% end %>
+</p>
