--- a/semana 3/martes/blog_anonimo/app/views/index.erb
+++ b/semana 3/martes/blog_anonimo/app/views/index.erb
@@ -1,11 +1,14 @@
   <h1>Bienvenido a Sinatra!</h1>
-  <% @posts.each do |post| %>
-  <p><a href="/post/<%= post.id %>"><%= post.title %></a></p>
-  <p><%= post.body %></p>
-  <p>Tags:
-    <% post.tags.each do |tag| %>
-    <a href="/tag/<%= tag.name %>"><%= tag.name %></a>,
-    <% end %>
-  </p>
+  <% for post in @posts do %>
+    <p><a href="/post/<%= post.id %>"><%= post.title %></a></p>
+    <p><%= post.body %></p>
+    <%= erb :_showtags, locals: { :post => post} %>
+    <!-- <p>Tags:
+      <% post.tags.each do |tag| %>
+      <a href="/tag/<%= tag.name %>"> <%= tag.name %></a>
+        <% if post.tags.last.name != tag.name %> ,
+        <% end %>
+      <% end %>
+    </p> -->
   <hr>
   <% end %>
