--- a/semana 3/martes/blog_anonimo/app/views/tag.erb
+++ b/semana 3/martes/blog_anonimo/app/views/tag.erb
@@ -1,7 +1,3 @@
-You searched for <%= @tag.name %>.
-
 <% for post in @posts %>
-<p><%= post.title %></p>
-<p><%= post.body %></p>
-<%= erb :_showtags, locals: {:post => post} %>
+<%= erb :_showpost, locals: {:post => post} %>
 <% end %>
