rayuela JS working

--- a/semana 4/lunes/rayuela/app/views/index.erb
+++ b/semana 4/lunes/rayuela/app/views/index.erb
@@ -1,4 +1,3 @@
-  <h1>Bienvenido a Sinatra!</h1>
-  <p>Este es un esqueleto de sinatra que armamos para ti</p>
-
-  
+  <h1>Bienvenido a Rayuela!</h1>
+  <p>Vamos a jugar!</p>
+  <p><a href="/register">Empieza!</a><p>
