--- a/semana 4/lunes/rayuela/public/css/application.css
+++ b/semana 4/lunes/rayuela/public/css/application.css
@@ -1,9 +1,60 @@
-.container {
-  margin: 20px auto;
-  width: 600px;
-  padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
+body {
+  font-family:Lato;
+  background-color: #3d82ab;
 }
+
+.container {
+  width:800px;
+  margin: 20px auto;
+  padding:5px 30px;
+  border: 5px solid #ee5921;
+  border-radius:5px;
+  background-color:white;
+  height:600px;
+}
+#board {
+  margin:120px 0;
+}
+
+#start-timer {
+  float:right;
+  margin-right:45px;
+  text-align: center;
+  width:50px;
+  font-size:1.4em;
+  border: 1px solid black;
+}
+
+.nametag {
+  width:60px;
+  float:left;
+  height:24px;
+  font-size:.9em;
+  text-align:center;
+}
+table {
+  margin-top:60px;
+  border: 1px solid black;
+}
+
+table td {
+  background-color: white;
+  height: 20px;
+  width: 20px;
+}
+
+table td.active {
+  background-color: black;
+}
+
+table td.goal {
+  background-color: red;
+}
+
 th {
   text-align: left;
+}
+
+#bottom {
+  font-size:1.4em;
 }
