--- a/semana 4/lunes/rayuela/app/views/register.erb
+++ b/semana 4/lunes/rayuela/app/views/register.erb
@@ -1,7 +1,7 @@
 <h1>Start new game</h1>
 <p>So, who's going to be playing?</p>
 <form action="/register" method="post">
-  <input type="text" name="player1" placeholder="Player One">
-  <input type="text" name="player2" placeholder="Player Two">
+  <input type="text" name="player1" placeholder="Player One Initials (e.g. WRB)"><br>
+  <input type="text" name="player2" placeholder="Player Two Initials"><br>
   <input type="submit" value="Vamos">
 </form>
