finished two column, three column

--- a/semana 3/viernes/Dos Columnas/main.css
+++ b/semana 3/viernes/Dos Columnas/main.css
@@ -3,3 +3,28 @@
   width: 750px;
 }
 
+.feature {
+  margin-top: 40px;
+}
+
+.feature, h3 {
+  clear:both;
+}
+
+.feature {
+}
+
+
+.column {
+  margin:0 1%;
+  width:48%;
+  float:left;
+}
+img {
+  width:100%;
+  margin: 60px 0;
+}
+
+.footer {
+  clear:both;
+}
