--- a/semana 4/miercoles/Barra tipo boton/main.css
+++ b/semana 4/miercoles/Barra tipo boton/main.css
@@ -2,3 +2,41 @@
   margin: 0 auto;  
   width: 720px;
 }
+
+nav ul {
+  padding-left:0;
+}
+
+nav li {
+    background: #b4b4b4; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#e2e2e2, #a2a2a2); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#e2e2e2, #a2a2a2); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#e2e2e2, #a2a2a2); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#e2e2e2, #a2a2a2); /* Standard syntax */
+}
+
+nav li {
+  list-style: none;
+  margin-left:.5%;
+  float:left;
+  width:18%;
+  text-align: center;
+  height:30px;
+  padding-top:10px;
+}
+
+li.first {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+li.last {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+li a {
+  color:white;
+  font-weight: bold;
+  text-decoration:none;
+}
