--- a/semana 5/lunes/quora/public/css/application.css
+++ b/semana 5/lunes/quora/public/css/application.css
@@ -1,9 +1,60 @@
+body {
+  font-family:Lato;
+  background-color: #70b7e0;
+}
+
 .container {
   margin: 20px auto;
-  width: 600px;
+  width: 720px;
   padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
 }
+
 th {
   text-align: left;
 }
+
+h1 {
+  border: 2px solid black;
+  padding:20px;
+  background-color:white;
+}
+
+.entry h3 {
+  text-align:center;
+}
+
+h3 a {
+  text-decoration: none;
+  color:black;
+}
+
+form, .entry {
+  width:80%;
+  margin: 20px auto;
+  padding:5px 30px;
+  border: 5px solid #eb6c3c;
+  border-radius:5px;
+  background-color:white;
+  font-size: 1.2em;
+}
+
+input {
+  margin-top:10px;
+}
+
+textarea {
+  margin-top:10px;
+  width:80%;
+  height:10em;
+}
+.tags {
+  border-top: 1px dotted black;
+  padding-top:5px;
+}
+/*
+#3d82ab;
+#ee5921;
+#484848;
+#3186ad;
+#96c950;
+#72a435;*/
