--- a/semana 5/lunes/quora/app/views/ask.erb
+++ b/semana 5/lunes/quora/app/views/ask.erb
@@ -1,5 +1,5 @@
 <form action="/ask" method="post">
-  <input type="text" name="title">
+  <input class="question-title" type="text" name="title">
   <textarea name="body"></textarea>
   <input type="submit" value="Ask">
 </form>
