--- a/semana 5/lunes/quora/app/views/layout.erb
+++ b/semana 5/lunes/quora/app/views/layout.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
-    normalize.css remueve las diferenecia que hay entre browsers segun los defaults de css predeterminados que utilizan. 
+  <!--
+    normalize.css remueve las diferenecia que hay entre browsers segun los defaults de css predeterminados que utilizan.
     Revisa: http://necolas.github.com/normalize.css/
   -->
+  <link href='https://fonts.googleapis.com/css?family=News+Cycle:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/normalize.css">
   <!--
     application.css este es el archivo donde van tus estilos, tu css
@@ -14,7 +15,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
-  <title></title>
+  <title>My Quora</title>
 </head>
 <body>
   <div class="container">
