--- a/semana 5/lunes/quora/app/views/register.erb
+++ b/semana 5/lunes/quora/app/views/register.erb
@@ -1,6 +1,6 @@
-<form action="/register" method="post">
-  <input type="text" name="username" placeholder="name">
-  <input type="password" name="password" placeholder="password">
-  <input type="submit" value="Submit">
+<form class="signin" action="/register" method="post">
+    <input type="text" name="username" placeholder="name">
+    <input type="password" name="password" placeholder="password">
+    <input type="submit" value="Submit">
 
 </form>
