--- a/semana 5/lunes/quora/app/views/signin.erb
+++ b/semana 5/lunes/quora/app/views/signin.erb
@@ -1,4 +1,4 @@
-<form action="/signin" method="post">
+<form class="signin" action="/signin" method="post">
   <input type="text" name="username" placeholder="name">
   <input type="password" name="password" placeholder="password">
   <input type="submit" value="Submit">
