--- a/semana 5/lunes/quora/public/css/application.css
+++ b/semana 5/lunes/quora/public/css/application.css
@@ -1,5 +1,29 @@
-body {
+#topbar {
+  height:60px;
+  background-color: black;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  padding-left:20px;
+  border-bottom: 4px solid rgba(255, 0, 0, .5);
   font-family:Lato;
+}
+
+#topbar p {
+  float:left;
+  width:100px;
+}
+
+#topbar a {
+  font-size:20px;
+  text-decoration: none;
+  color:white;
+}
+
+body {
+  padding-top:60px;
+  font-family:Times;
   background-color: #70b7e0;
 }
 
@@ -9,26 +33,41 @@ body {
   padding: 0px 20px 20px 20px;
 }
 
-th {
-  text-align: left;
-}
-
 h1 {
+  text-align:center;
   border: 2px solid black;
   padding:20px;
   background-color:white;
 }
 
-.entry h3 {
-  text-align:center;
+h2 {
+  font-family: 'News Cycle', sans-serif;
+  font-size:1.3em;
+  line-height: 1.1em;
+  margin-bottom:12px;
 }
 
-h3 a {
-  text-decoration: none;
-  color:black;
+.link {
+  margin-left:6px;
 }
 
-form, .entry {
+h2 a, .link {
+  font-family:sans-serif;
+  text-decoration:none;
+  font-size:.8em;
+  color:#bebebe;
+}
+
+.question .author {
+  font-style: italic;
+}
+
+.question-body {
+  margin-top:10px;
+  padding-left: 30px;
+}
+
+.entry, form.signin {
   width:80%;
   margin: 20px auto;
   padding:5px 30px;
@@ -38,18 +77,59 @@ form, .entry {
   font-size: 1.2em;
 }
 
-input {
-  margin-top:10px;
+form.signin {
+  padding:60px;
 }
 
+.entry div.question {
+  border-top:1px dotted gray;
+  border-bottom: 2px solid black;
+  padding: 10px 0;
+}
+
+.author {
+  font-weight:bold;
+}
+
+.answer {
+  border-bottom: 1px solid black;
+}
+
+.answer p {
+  margin:5px 0;
+}
+
+.answer .body {
+  margin-left:20px;
+}
+
+input, textarea {
+  margin:5px 0;
+}
+
+.new-answer {
+  display:none;
+}
 textarea {
-  margin-top:10px;
+  font-size:14px;
+  font-family:sans-serif;
   width:80%;
   height:10em;
 }
 .tags {
   border-top: 1px dotted black;
   padding-top:5px;
+}
+
+button {
+  padding:6px 12px;
+  background-color: #70b7e0;
+  border:1px solid white;
+  color:white;
+}
+
+input.question-title {
+  width:60%;
 }
 /*
 #3d82ab;
