--- a/semana 5/lunes/quora/public/css/application.css
+++ b/semana 5/lunes/quora/public/css/application.css
@@ -5,20 +5,25 @@
   top:0;
   left:0;
   width:100%;
-  padding-left:20px;
   border-bottom: 4px solid rgba(255, 0, 0, .5);
   font-family:Lato;
 }
 
 #topbar p {
-  float:left;
+  float:right;
   width:100px;
+  padding-right:20px;
 }
 
-#topbar a {
+#topbar a, #topbar p {
   font-size:20px;
   text-decoration: none;
   color:white;
+}
+
+#topbar p.user-display {
+  float:left;
+  padding-left:40px;
 }
 
 body {
@@ -29,7 +34,7 @@ body {
 
 .container {
   margin: 20px auto;
-  width: 720px;
+  width: 80%;
   padding: 0px 20px 20px 20px;
 }
 
@@ -97,6 +102,7 @@ form.signin {
 
 .answer p {
   margin:5px 0;
+  font-size:16px;
 }
 
 .answer .body {
@@ -121,7 +127,7 @@ textarea {
   padding-top:5px;
 }
 
-button {
+button, input[type="submit"] {
   padding:6px 12px;
   background-color: #70b7e0;
   border:1px solid white;
