more detailled user info

--- a/semana 5/lunes/quora/app/views/_displayanswer.erb
+++ b/semana 5/lunes/quora/app/views/_displayanswer.erb
@@ -1,4 +1,4 @@
 <div class="answer">
-  <p class="author"><%= answer.author %></p>
+  <p class="author"><%= answer.user.fullname %></p>
   <p class="body"><%= answer.body %></p>
 </div>
