--- a/semana 5/lunes/quora/app/views/question.erb
+++ b/semana 5/lunes/quora/app/views/question.erb
@@ -1,1 +1,3 @@
+<%= erb :_top, locals: {:user => @user} %>
+
 <%= erb :_displayquestion, locals: { :question => @question, :user_id => session['user_id'] } %>
