--- a/semana 5/lunes/quora/app/views/ask.erb
+++ b/semana 5/lunes/quora/app/views/ask.erb
@@ -1,5 +1,8 @@
+<%= erb :_top, locals: {:user => @user} %>
+<div class="entry">
 <form action="/ask" method="post">
-  <input class="question-title" type="text" name="title">
-  <textarea name="body"></textarea>
+  <input class="question-title" type="text" name="title" placeholder="Question">
+  <textarea name="body" placeholder="Add more details (optional)"></textarea>
   <input type="submit" value="Ask">
 </form>
+</div>
