--- a/semana 5/lunes/quora/public/css/application.css
+++ b/semana 5/lunes/quora/public/css/application.css
@@ -35,8 +35,11 @@ body {
 
 .container {
   margin: 20px auto;
-  width: 800px;
+  width: 820px;
   padding: 0px 20px 20px 20px;
+  background-color: #e0e0e0;
+  border-radius:10px;
+  padding:20px;
 }
 
 h1 {
@@ -78,7 +81,7 @@ h2 a, .link {
   width:80%;
   margin: 20px auto;
   padding:5px 30px;
-  border: 5px solid #eb6c3c;
+  border: 2px solid #eb6c3c;
   border-radius:5px;
   background-color:white;
   font-size: 1.2em;
@@ -107,6 +110,11 @@ form.signin input[type="submit"] {
   font-weight:bold;
 }
 
+.author a {
+  text-decoration-style: dotted;
+  color:black;
+}
+
 .answer {
   border-bottom: 1px solid black;
   margin: 20px auto;
@@ -116,6 +124,26 @@ form.signin input[type="submit"] {
   margin:5px 0;
   font-size:16px;
   width:80%;
+}
+
+.voter {
+  float:left;
+  padding-right:20px;
+}
+
+.voter p {
+}
+
+p.vote {
+  margin:4px 0;
+  padding:0;
+  font-size:20px;
+  font-weight:bold;
+}
+
+p.vote a {
+  color:green;
+  text-decoration: none;
 }
 
 .answer .body {
@@ -155,6 +183,21 @@ button, input[type="submit"] {
 
 input.question-title {
   width:60%;
+}
+
+.votetotal {
+  color:gray;
+  font-size: 14px;
+  font-style:italic;
+}
+
+th {
+  text-align:left;
+}
+
+td {
+  width:30%;
+  border-bottom:1px dotted gray;
 }
 /*
 #3d82ab;
